
All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/abcrypt-capi-v0.3.2\...HEAD[Unreleased]

=== Changed

* Re-enable `clang-format` and `clang-tidy` on CI ({pull-request-url}/384[#384])

== {compare-url}/abcrypt-capi-v0.3.1\...abcrypt-capi-v0.3.2[0.3.2] - 2024-04-16

=== Fixed

* Fix typos in man pages ({pull-request-url}/377[#377])

== {compare-url}/abcrypt-capi-v0.3.0\...abcrypt-capi-v0.3.1[0.3.1] - 2024-04-16

=== Added

* Add man pages for API ({pull-request-url}/369[#369])

== {compare-url}/abcrypt-capi-v0.2.6\...abcrypt-capi-v0.3.0[0.3.0] - 2024-02-17

=== Changed

* Bump MSRV to 1.74.0 ({pull-request-url}/272[#272])
* Rename Argon2 parameters ({pull-request-url}/275[#275])

== {compare-url}/abcrypt-capi-v0.2.5\...abcrypt-capi-v0.2.6[0.2.6] - 2024-02-05

=== Changed

* Update C API examples ({pull-request-url}/257[#257])

== {compare-url}/abcrypt-capi-v0.2.4\...abcrypt-capi-v0.2.5[0.2.5] - 2024-01-18

=== Changed

* Update dependencies

== {compare-url}/abcrypt-capi-v0.2.3\...abcrypt-capi-v0.2.4[0.2.4] - 2024-01-07

=== Changed

* Change to use `bump-my-version`

== {compare-url}/abcrypt-capi-v0.2.2\...abcrypt-capi-v0.2.3[0.2.3] - 2023-12-07

=== Changed

* Reduce package size

== {compare-url}/abcrypt-capi-v0.2.1\...abcrypt-capi-v0.2.2[0.2.2] - 2023-11-29

=== Changed

* Bump MSRV to 1.70.0 ({pull-request-url}/139[#139])

== {compare-url}/abcrypt-capi-v0.2.0\...abcrypt-capi-v0.2.1[0.2.1] - 2023-11-04

=== Changed

* Update dependencies

== {compare-url}/abcrypt-capi-v0.1.2\...abcrypt-capi-v0.2.0[0.2.0] - 2023-10-02

=== Changed

* Change functions that may causes undefined behavior or memory problems to the
  unsafe function ({pull-request-url}/95[#95])

== {compare-url}/abcrypt-capi-v0.1.1\...abcrypt-capi-v0.1.2[0.1.2] - 2023-09-29

=== Fixed
