@@ -19,6 +19,7 @@ project adheres to https://semver.org/[Semantic Versioning].
 === Changed
 
 * Re-enable `clang-format` and `clang-tidy` on CI ({pull-request-url}/384[#384])
+* Use `extern "C-unwind"` instead of `extern "C"` ({pull-request-url}/542[#542])
 
 == {compare-url}/abcrypt-capi-v0.3.1\...abcrypt-capi-v0.3.2[0.3.2] - 2024-04-16
 
